[project]
name = "imaging_plaza_search"
authors = [
  { name = "Robin Franken", email = "robin.franken@epfl.ch" },
]
description = "A microservice for fetching relevant softwares to a certain search term + filters"
readme = "README.md"
requires-python = ">=3.10"
version = "0.1.0"

dependencies = [
    "fastapi==0.115.11",
    "uvicorn==0.22.0",
    "python-dotenv==0.21.1",
    "SPARQLWrapper==2.0.0",
    "rdflib==7.1.4",
    "pyshacl==0.25.0",
    "requests==2.32.3",
    "pydantic==2.10.3",
    "pyfuzon==0.4.0",
    "RapidFuzz==3.13.0"
]

[dependency-groups]
dev = [
    "notebook>=7.3.2",
    "black",
    "ruff",
    "mypy",
]

[project.scripts]
cli = "imaging_plaza_search.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [
    ".direnv",
    ".devenv",
    ".output",
]

[tool.ruff]
extend-include = ["*.ipynb"]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
extend-select = [
    "W605",   # pycodestyle: invalid-escape-sequence
    "S102",   # flake8-bandit: exec-builtin
    "INP",    # flake8-no-pep420
    "PYI",    # flake8-pyi
    "PT",     # flake8-pytest-style
    "PGH",    # pygrep-hooks
    "PL",     # Pylint
    "NPY",    # NumPy-specific rules
    "RUF",    # Ruff-specific rules
]
ignore = [
    "NPY002", # numpy-legacy-random
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**" = ["INP001"]
"[!t][!e][!s][!t][!s]*/**" = ["PT"]
